--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 img {
     border-radius: 50%;
 }
@@ -11,23 +16,19 @@ body {
 
 .info {
     display: flex;
-    justify-content: center;
-    align-content: center;
-    /* margin: 3vw 3vw 0 3vw; */
+    justify-content: space-around;
+    font-size: 40px;
 }
 
 .btns {
-    margin-left: auto;
-    margin-right: auto;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 3vh;
   }
 
 .gameBoard {
-    height: 90vh;
+    height: 85vh;
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.gameTimer {
-    font-size: 40px;
 }
